force-app/main/default/objects/Pet__c/fields/DataProximaVacinacao__c.field-meta.xml
<CustomField>
    <fullName>DataProximaVacinacao__c</fullName>
    <label>Data da próxima vacinação</label>
    <type>Date</type>
</CustomField>