force-app/main/default/objects/Pet__c/fields/Raca__c.field-meta.xml
<CustomField>
    <fullName>Raca__c</fullName>
    <label>Raça</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Especie__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vira-lata</fullName>
            </value>
            <value>
                <fullName>Poodle</fullName>
            </value>
            <value>
                <fullName>Siamês</fullName>
            </value>
            <value>
                <fullName>Persa</fullName>
            </value>
            <value>
                <fullName>Americam Bully micro</fullName>
            </value>
            <value>
                <fullName>Americam Bully sandard</fullName>
            </value>
            <value>
                <fullName>Americam Bully XL</fullName>
            </value>
            <value>
                <fullName>PitBull</fullName>
            </value>
            <value>
                <fullName>Husk</fullName>
            </value>
            <value>
                <fullName>Buldog Frances</fullName>
            </value>
            <value>
                <fullName>Buldog Americano</fullName>
            </value>
            <value>
                <fullName>America Staforshire</fullName>
            </value>
            <value>
                <fullName>Siberiam</fullName>
            </value>
            <value>
                <fullName>Ragdoll</fullName>
            </value>
            <value>
                <fullName>Siames</fullName>
            </value>
            <value>
                <fullName>Mainecon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>